Kyc wrap issue resolved

--- a/src/components/KYC/kyc-style.css
+++ b/src/components/KYC/kyc-style.css
@@ -262,6 +262,7 @@ a.activepaylink-kyc{
   line-height: 26px;
   letter-spacing: 0em;
   color: green;
+  white-space: nowrap;
 }
 
 .text-kyc-header {
